src/objects/Employment_Contract__c.object
<CustomObject>
    <description>Used for tracking summer program employment.</description>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Georgetown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princeton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virginia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomat Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment Contracts</relationshipLabel>
        <relationshipName>Employment_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Taught__c</fullName>
        <label>Course Taught</label>
        <picklist>
            <picklistValues>
                <fullName>APUSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Macroeconomics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congressional Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constitutional Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomat Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshman Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Rehire__c</fullName>
        <label>Eligible for Rehire?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Summer School</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Election Symposium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employment Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employment Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>